--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,6 @@ dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.39'
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     compile group: 'javax.servlet.jsp', name: 'jsp-api', version: '2.1'
+    compile group: 'junit', name: 'junit', version: '4.12'
 
 }
